# torch2grid

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  example_plugin.py  install.sh  pyproject.toml  run_tests.sh  setup.py  simple_cnn.pth  test_gradients.py  tinynet.pth  train_conv_model.py  train_dummy_model.py
.github/workflows/: ci.yml
examples/: README.md  demo.py
grids/: dead_neurons_report.json
tests/: test_basic.py  test_loader.py
torch2grid/: __main__.py  __version__.py  config.py  conv_visualizer.py  dead_neuron_detector.py  exporter.py  gradient_visualizer.py  histogram.py  inspector.py  interactive.py  layer_visualizer.py  loader.py  requirements.txt  transformer.py  utils.py  visualizer.py
torch2grid/examples/: demo.py
torch2grid/plugins/: __init__.py  base.py  builtin.py  registry.py
torch2grid/tests/: __init__.py  test_basic.py  test_loader.py
